--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,9 +33,7 @@ jobs:
     - name: build all
       run: ./rebuild.sh
     - name: sbt ci-release utils
-      run: |
-        sdk use java 21-graalce
-        sbt ci-release
+      run: ./release.sh
       working-directory: utils
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -46,9 +44,7 @@ jobs:
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release client
-      run: |
-        sdk use java 21-graalce
-        sbt ci-release
+      run: ./release.sh
       working-directory: client
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -59,9 +55,7 @@ jobs:
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-frontend
-      run: |
-        sdk use java 21-graalce
-        sbt ci-release
+      run: ./release.sh
       working-directory: snapi-frontend
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -72,9 +66,7 @@ jobs:
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-truffle
-      run: |
-        sdk use java 21-graalce
-        sbt ci-release
+      run: ./release.sh
       working-directory: snapi-truffle
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -85,9 +77,7 @@ jobs:
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-client
-      run: |
-        sdk use java 21-graalce
-        sbt ci-release
+      run: ./release.sh
       working-directory: snapi-client
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
