--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -106,6 +106,7 @@ jobs:
         echo "SNAPI_FRONTEND_VER=$(cat snapi-frontend/version)" >> $GITHUB_ENV
         echo "SNAPI_TRUFFLE_VER=$(cat snapi-truffle/version)" >> $GITHUB_ENV
         echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
+        echo "SQL_CLIENT=$(cat sql-client/version)" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
       uses: peter-evans/create-or-update-comment@v2
       with:
@@ -118,6 +119,7 @@ jobs:
           > will publish snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
           > will publish snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
           > will publish snapi-client version: ${{ env.SNAPI_CLIENT }}
+          > will publish sql-client version: ${{ env.SQL_CLIENT }}
         reactions: rocket
     - if: success() && github.event_name == 'push' && contains(github.ref, 'refs/tags/')
       uses: peter-evans/repository-dispatch@v2
