--- a/.github/workflows/sync-deps.yaml
+++ b/.github/workflows/sync-deps.yaml
@@ -34,4 +34,7 @@ jobs:
           BUCKET: ${{ secrets.AWS_RAW_S3_BIN_BUCKET }}
         run: |
           M2_HOME=/home/sbtuser/.m2/repository
+          aws s3 sync $M2_HOME s3://$BUCKET/maven --exclude '*' --include '**kiama**'
+          cd deps/others
           sbt createS3SyncScript
+          ./s3-sync-deps.sh
