--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,7 +63,7 @@ jobs:
         PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
         PGP_SECRET: ${{ secrets.PGP_SECRET }}
         CI_CLEAN: clean
-        CI_RELEASE: publish
+        CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-frontend
       run: ./release.sh
