--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -1,6 +1,12 @@
 raw.client.sql {
   schema-cache {
-    size = 10
-    duration = 1m // 1 minute before cached schemas are invalidated
+    size = 1000
+    duration = 30m
+  }
+  pool {
+    max-connections = 10
+    max-lifetime = 30s
+    idle-timeout = 30s
+    connection-timeout = 30s
   }
 }
