--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -1,4 +1,7 @@
 raw.client.sql {
+  error-messages {
+     missing-relation = "Did you forget to add credentials?"
+  }
   metadata-cache {
     size = 1000 // how many individual user metadata caches do we keep
     duration = 30m // how long do we keep a user metadata data cache
